<resources>
    <string name="app_name">SavePasswordOffline</string>
    <string name="emailaddress">EMAIL ADDRESS</string>
    <string name="email_address">Email Address</string>
    <string name="logo_of_application">Logo of Application</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">PASSWORD</string>
    <string name="s_i_g_n_i_n">S I G N I N</string>
    <string name="new_user">Don\'t Have an Account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pass_word">Password</string>
    <string name="show">SHOW</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_has_minimum_8_characters_and_has_at_least_one_number_one_uppercase_one_lowercase_and_one_special_character">PASSWORD TOO WEAK!!\nPassword has minimum 8 characters and has at least one Number[0-9],one Uppercase[A-Z],one Lowercase[a-z] and one Special Character[@#$%^*=+]</string>
    <string name="invalid_email_password">Invalid Email/Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_application_name">Enter Application Name</string>
    <string name="account_information">Account Information</string>
</resources>
